<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>lt.gama-online</groupId>
	<artifactId>api3</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<name>gama-online</name>
	<description>gama-online api v3</description>
	<properties>
		<java.version>21</java.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<jpaseto.version>0.7.0</jpaseto.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.cloud.sql</groupId>
			<artifactId>postgres-socket-factory</artifactId>
			<version>1.11.1</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-json</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-storage</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-tasks</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-logging-logback</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>

		<dependency>
			<groupId>dev.paseto</groupId>
			<artifactId>jpaseto-api</artifactId>
			<version>${jpaseto.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.paseto</groupId>
			<artifactId>jpaseto-impl</artifactId>
			<version>${jpaseto.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>dev.paseto</groupId>
			<artifactId>jpaseto-hkdf</artifactId>
			<version>${jpaseto.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- hibernate-jpamodelgen -->
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
		</dependency>

		<!-- mapping entity <-> DTO - depends on hibernate-jpamodelgen -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<!-- converter from html to txt -->
		<dependency>
			<groupId>net.htmlparser.jericho</groupId>
			<artifactId>jericho-html</artifactId>
			<version>3.4</version>
		</dependency>

		<!-- countries, languages, currencies codes -->
		<dependency>
			<groupId>com.neovisionaries</groupId>
			<artifactId>nv-i18n</artifactId>
			<version>1.29</version>
		</dependency>

		<!-- template engine -->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
		</dependency>

		<!-- html2pdf-->
		<dependency>
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-core</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-pdfbox</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.14.3</version>
		</dependency>
		<dependency>
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-objects</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.4.0</version>
		</dependency>

		<!-- others -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.9.0</version>
		</dependency>

		<!-- soap -->
		<dependency>
			<groupId>jakarta.xml.soap</groupId>
			<artifactId>jakarta.xml.soap-api</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
		</dependency>

		<!-- tests -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- docs generation -->
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>2.2.19</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
<!--			<dependency>-->
<!--				<groupId>org.springframework.cloud</groupId>-->
<!--				<artifactId>spring-cloud-dependencies</artifactId>-->
<!--				<version>${spring-cloud.version}</version>-->
<!--				<type>pom</type>-->
<!--				<scope>import</scope>-->
<!--			</dependency>-->
<!--			<dependency>-->
<!--				<groupId>com.google.cloud</groupId>-->
<!--				<artifactId>spring-cloud-gcp-dependencies</artifactId>-->
<!--				<version>${spring-cloud-gcp.version}</version>-->
<!--				<type>pom</type>-->
<!--				<scope>import</scope>-->
<!--			</dependency>-->
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>26.37.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>2.8.0</version>
				<configuration>
					<deploy.projectId>GCLOUD_CONFIG</deploy.projectId>
					<version>GCLOUD_CONFIG</version>
				</configuration>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.hibernate.orm.tooling</groupId>-->
<!--				<artifactId>hibernate-enhance-maven-plugin</artifactId>-->
<!--				<version>${hibernate.version}</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>enhance</id>-->
<!--						<goals>-->
<!--							<goal>enhance</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<enableLazyInitialization>true</enableLazyInitialization>-->
<!--							<enableDirtyTracking>true</enableDirtyTracking>-->
<!--							<enableAssociationManagement>true</enableAssociationManagement>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- mappings, hibernate-jpamodelgen -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.hibernate</groupId>
							<artifactId>hibernate-jpamodelgen</artifactId>
							<version>${hibernate.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

			<!-- wsdl -->
			<plugin>
				<groupId>com.sun.xml.ws</groupId>
				<artifactId>jaxws-maven-plugin</artifactId>
				<version>4.0.1</version>
				<executions>
					<execution>
						<id>wsdl-eu-tax</id>
						<goals>
							<goal>wsimport</goal>
						</goals>
						<configuration>
							<wsdlDirectory>${project.basedir}/src/main/resources/integrations/eu/wsdl</wsdlDirectory>
							<packageName>lt.gama.integrations.eu.ws</packageName>
							<extension>true</extension>
						</configuration>
					</execution>
					<execution>
						<id>wsdl-vmi-taxfree</id>
						<goals>
							<goal>wsimport</goal>
						</goals>
						<configuration>
							<wsdlDirectory>${project.basedir}/src/main/resources/integrations/vmi/wsdl</wsdlDirectory>
							<packageName>lt.gama.integrations.vmi.ws</packageName>
							<extension>true</extension>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- swagger codegen -->
<!--			<plugin>-->
<!--				<groupId>org.openapitools</groupId>-->
<!--				<artifactId>openapi-generator-maven-plugin</artifactId>-->
<!--				<version>7.2.0</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<goals>-->
<!--							<goal>generate</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>-->
<!--							<generatorName>java</generatorName>-->
<!--							<configOptions>-->
<!--								<sourceFolder>src/gen/java/main</sourceFolder>-->
<!--							</configOptions>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
		</plugins>
	</build>

</project>
